--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.15.2",
     "gh-pages": "^0.12.0",
     "morgan": "^1.8.1",
+    "nedb": "^1.8.0",
     "node": "^0.0.0",
     "prop-types": "^15.5.8",
     "react": "^15.6.0",
