--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-react": "^6.10.3",
     "express": "^4.15.2",
     "gh-pages": "^0.12.0",
+    "html-react-parser": "^0.3.3",
     "morgan": "^1.8.1",
     "nedb": "^1.8.0",
     "node": "^0.0.0",
