--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^15.6.0",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-toolbox": "^2.0.0-beta.12",
     "tinymce": "^4.6.4"
   },
   "devDependencies": {
